// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/NextRace renders correctly 1`] = `
<td>
  <div>
    Wed, 1:45 PM UTC
  </div>
</td>
`;

exports[`components/columns/NextRace renders no time data 1`] = `
<td>
  No time data
</td>
`;
